--- a/TraceIt/Views/SubjectSelectionPage.xaml
+++ b/TraceIt/Views/SubjectSelectionPage.xaml
@@ -17,6 +17,19 @@
                 <Setter Property="FontSize">Large</Setter>
                 <Setter Property="HorizontalTextAlignment">Center</Setter>
                 <Setter Property="TextColor">Black</Setter>
+                <Setter Property="Margin" Value="8"/>
+            </Style>
+
+            <Style TargetType="Label" x:Key="subjectItemLabel">
+                <Setter Property="Margin" Value="3"/>
+                <Setter Property="VerticalOptions" Value="CenterAndExpand"/>
+                <Setter Property="FontSize" Value="16"/>
+                <Setter Property="FontAttributes" Value="Bold"/>
+            </Style>
+
+            <Style TargetType="Frame">
+                <Setter Property="HasShadow" Value="False"/>
+                <Setter Property="CornerRadius" Value="20"/>
             </Style>
         </ResourceDictionary>
     </ContentPage.Resources>
@@ -40,79 +53,56 @@
     </ContentPage.ToolbarItems>
 
     <ContentPage.Content>
-        <AbsoluteLayout>
-            <StackLayout BackgroundColor="White" AbsoluteLayout.LayoutFlags="All"
-                         AbsoluteLayout.LayoutBounds="0, 0, 1, 0.85">
+        <Grid Background="{DynamicResource LightBlueToDarkMain}" RowDefinitions="Auto, *, 50"
+              RowSpacing="0">
 
-                <SearchBar x:Name="searchBar" Placeholder="Search subjects"
-                           TextChanged="searchBar_TextChanged"/>
+            <SearchBar x:Name="searchBar" Placeholder="Search subjects"
+                       TextChanged="searchBar_TextChanged"
+                       Grid.Row="0"/>
 
-                <listview:SfListView x:Name="subjectsListView" ItemSpacing="7"
-                                 SelectionMode="Multiple"
-                                 VerticalOptions="StartAndExpand"
-                                 HorizontalOptions="FillAndExpand"
-                                 Padding="10, 0" Margin="0"
-                                 AutoFitMode="Height"
-                                 ItemsSource="{Binding Subjects}">
+            <listview:SfListView x:Name="subjectsListView" ItemSpacing="7"
+                             SelectionMode="Multiple" VerticalOptions="StartAndExpand"
+                             HorizontalOptions="FillAndExpand" Padding="{OnIdiom Phone='10, 0', Tablet='25, 0'}" 
+                             Margin="0" AutoFitMode="DynamicHeight"
+                             ItemsSource="{Binding Subjects}" Grid.Row="1">
 
-                    <listview:SfListView.ItemTemplate>
-                        <DataTemplate>
-                            <Frame BackgroundColor="#f5f5f5"
-                               HasShadow="False"
-                               Padding="20,10,0,10"
-                               CornerRadius="20"
-                               BorderColor="#dedede">
+                <listview:SfListView.ItemTemplate>
+                    <DataTemplate>
+                        <Frame Background="{DynamicResource BlueToDarkGradient}">
 
-                                <StackLayout>
-                                    <Label Text="{Binding Name}" TextColor="Black"
-                                       FontSize="16"
-                                       VerticalOptions="CenterAndExpand"
-                                           Margin="8"/>
-                                </StackLayout>
+                            <Label Text="{Binding Name}" TextColor="White"
+                               Style="{StaticResource subjectItemLabel}"/>
 
-                            </Frame>
-                        </DataTemplate>
-                    </listview:SfListView.ItemTemplate>
+                        </Frame>
+                    </DataTemplate>
+                </listview:SfListView.ItemTemplate>
 
-                    <listview:SfListView.SelectedItemTemplate>
-                        <DataTemplate>
-                            <Frame BackgroundColor="Orange"
-                               HasShadow="False"
-                               Padding="20,10,0,10"
-                               CornerRadius="20"
-                               BorderColor="#dedede">
+                <listview:SfListView.SelectedItemTemplate>
+                    <DataTemplate>
+                        <Frame Background="{DynamicResource OrangeToLightGradient}">
 
-                                <StackLayout>
-                                    <Label Text="{Binding Name}" TextColor="White"
-                                       FontSize="16"
-                                       VerticalOptions="CenterAndExpand"/>
-                                </StackLayout>
+                            <Label Text="{Binding Name}" TextColor="#EBEBEB"
+                               Style="{StaticResource subjectItemLabel}"/>
 
-                            </Frame>
-                        </DataTemplate>
-                    </listview:SfListView.SelectedItemTemplate>
+                        </Frame>
+                    </DataTemplate>
+                </listview:SfListView.SelectedItemTemplate>
 
-                </listview:SfListView>
-            </StackLayout>
+            </listview:SfListView>
 
-            <button:SfButton x:Name="buttonConfirm"
-                             Text="CONFIRM"
-                             CornerRadius="25,25,0,0"
-                             Clicked="buttonConfirm_Clicked" 
-                             AbsoluteLayout.LayoutFlags="WidthProportional,PositionProportional"
-                             AbsoluteLayout.LayoutBounds="1, 1, 1, 50"
-                             AnchorY="1">
+            <Button x:Name="buttonConfirm" Text="CONFIRM"
+                         CornerRadius="25" Clicked="buttonConfirm_Clicked"
+                         Grid.Row="2" TextColor="White">
 
-                <button:SfButton.BackgroundGradient>
-                    <gradient:SfLinearGradientBrush StartPoint="0.5, 0" EndPoint="0.5, 1">
-                        <gradient:SfLinearGradientBrush.GradientStops>
-                            <gradient:SfGradientStop Color="#0012FF" Offset="0.0"/>
-                            <gradient:SfGradientStop Color="#000B98" Offset="1.0"/>
-                        </gradient:SfLinearGradientBrush.GradientStops>
-                    </gradient:SfLinearGradientBrush>
-                </button:SfButton.BackgroundGradient>
-            </button:SfButton>
-            
-        </AbsoluteLayout>
+                <Button.Background>
+                    <LinearGradientBrush StartPoint="0.5, 0" EndPoint="0.5, 1">
+                        <LinearGradientBrush.GradientStops>
+                            <GradientStop Color="#0012FF" Offset="0.0"/>
+                            <GradientStop Color="#000B98" Offset="1.0"/>
+                        </LinearGradientBrush.GradientStops>
+                    </LinearGradientBrush>
+                </Button.Background>
+            </Button>
+        </Grid>
     </ContentPage.Content>
 </ContentPage>
