Set the Plus icon to default to black as Android defaults to white.

--- a/TraceIt/Views/StandardCategorisedDetailPage.xaml
+++ b/TraceIt/Views/StandardCategorisedDetailPage.xaml
@@ -51,7 +51,8 @@
                                     </Button.Background>
 
                                     <Button.ImageSource>
-                                        <FontImageSource FontFamily="PrimaryIcons" Glyph="{DynamicResource Plus}"/>
+                                        <FontImageSource FontFamily="PrimaryIcons" Glyph="{DynamicResource Plus}"
+                                                         Color="Black"/>
                                     </Button.ImageSource>
 
                                     <Button.Triggers>
